add Interface for my Report Class